[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/World.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Viz.gd" type="Script" id=2]
[ext_resource path="res://Scenes/TrackPath.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/MainCam.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Controller.gd" type="Script" id=6]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.4, 0.603922, 0.0745098, 1 )

[sub_resource type="CubeMesh" id=2]

[sub_resource type="Skin" id=3]

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.894118, 0.960784, 1, 1 )
metallic = 0.8
metallic_specular = 0.88

[sub_resource type="CapsuleMesh" id=5]

[sub_resource type="BoxShape" id=6]

[node name="World" type="Spatial"]
script = ExtResource( 1 )

[node name="Ground" type="Spatial" parent="."]
transform = Transform( 200, 0, 0, 0, 0.1, 0, 0, 0, 200, 0, 0, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Ground"]
transform = Transform( 1, 0, 0, 0, 0.999999, 0, 0, 0, 0.999999, 0, 0, 0 )
material_override = SubResource( 1 )
mesh = SubResource( 2 )
skin = SubResource( 3 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 10, 0 )
shadow_enabled = true

[node name="Car" type="KinematicBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
script = ExtResource( 6 )

[node name="MeshInstance" type="MeshInstance" parent="Car"]
material_override = SubResource( 4 )
mesh = SubResource( 5 )

[node name="Camera_Target_Ego" type="Spatial" parent="Car"]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 0, 3.2, -5 )

[node name="CollisionShape" type="CollisionShape" parent="Car"]
shape = SubResource( 6 )

[node name="Camera_Target_TopDown" type="Spatial" parent="Car"]
transform = Transform( -1, -3.25841e-07, -5.30863e-14, 0, -1.62921e-07, 1, -3.25841e-07, 1, 1.62921e-07, 0, 60, 0 )

[node name="TrackPath" parent="." instance=ExtResource( 4 )]

[node name="InterpolatedCamera" type="InterpolatedCamera" parent="."]
current = true
far = 165.0
target = NodePath("../Car/Camera_Target_TopDown")
speed = 5.0
enabled = true
script = ExtResource( 5 )

[node name="Viz" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = 10.0
margin_top = 10.0

[node name="Camera_TopDown_Static" type="Spatial" parent="."]
transform = Transform( -1, 8.74228e-08, 3.82137e-15, 0, -4.37114e-08, 1, 8.74228e-08, 1, 4.37114e-08, 0, 150, 0 )

[node name="Panel" type="Panel" parent="."]
margin_left = 797.0
margin_top = 3.0
margin_right = 1014.0
margin_bottom = 28.0

[node name="Label" type="Label" parent="Panel"]
margin_left = 4.74072
margin_top = 4.01139
margin_right = 89.7407
margin_bottom = 18.0114
text = "Engine Power"

[node name="HSlider" type="HSlider" parent="Panel"]
margin_left = 96.0114
margin_top = 2.5527
margin_right = 211.011
margin_bottom = 18.5527
min_value = 1.0
max_value = 60.0
value = 60.0

[connection signal="value_changed" from="Panel/HSlider" to="Car" method="_on_HSlider_value_changed"]
